kubernetes/monitoring/backend/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: monitor-app-service
spec:
  type: NodePort
  selector:
    app: monitor-app
    tier: backend
  ports:
  - port: 8088
    targetPort: 8088
    nodePort: 30011
