kubernetes/monitoring/backend/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /monitor/api/(.*)
        backend:
          service:
            name: monitor-app-service
            port:
              number: 8088
